--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
   "homepage": "https://github.com/prateeeksagar/LenderSystemBackend#readme",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.2.0",
     "nodemon": "^2.0.21",
     "sequelize": "^6.29.3",
-    "sequelize-cli": "^6.6.0"
+    "sequelize-cli": "^6.6.0",
+    "uniqid": "^5.4.0"
   }
 }
