--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.2.0",
     "nodemon": "^2.0.21",
+    "puppeteer": "^20.2.1",
     "sequelize": "^6.29.3",
     "sequelize-cli": "^6.6.0",
     "uniqid": "^5.4.0"
