--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.2.0",
+    "nodemailer": "^6.9.2",
     "nodemon": "^2.0.21",
     "puppeteer": "^20.2.1",
     "sequelize": "^6.29.3",
